@@ -7,6 +7,7 @@ import static org.cmdbuild.common.Constants.DESCRIPTION_ATTRIBUTE;
 import static org.cmdbuild.common.Constants.ID_ATTRIBUTE;
 import static org.cmdbuild.common.Constants.ROLE_CLASS_NAME;
 import static org.cmdbuild.dao.entry.Functions.toAttributeValue;
+import static org.cmdbuild.dao.entry.Functions.toId;
 import static org.cmdbuild.dao.guava.Functions.toCard;
 import static org.cmdbuild.dao.guava.Functions.toRelation;
 import static org.cmdbuild.dao.query.clause.AnyAttribute.anyAttribute;
@@ -90,7 +91,7 @@ public class DataViewFilterStore implements FilterStore {
 		return clause;
 	}
 
-	private WhereClause filterIds(final Long... ids) {
+	private static WhereClause filterIds(final Long... ids) {
 		final WhereClause clause;
 		if (ids == null) {
 			clause = alwaysTrue();
@@ -98,6 +99,18 @@ public class DataViewFilterStore implements FilterStore {
 			clause = alwaysFalse();
 		} else {
 			clause = condition(attribute(F, ID), in(ids));
+		}
+		return clause;
+	}
+
+	private static WhereClause groupNames(final String... values) {
+		final WhereClause clause;
+		if (values == null) {
+			clause = alwaysTrue();
+		} else if (values.length == 0) {
+			clause = alwaysFalse();
+		} else {
+			clause = condition(attribute(R, CODE_ATTRIBUTE), in(values));
 		}
 		return clause;
 	}
@@ -221,7 +234,7 @@ public class DataViewFilterStore implements FilterStore {
 	}
 
 	@Override
-	public Iterable<String> joined(final Long filter) {
+	public Iterable<String> joinedGroups(final Long filter) {
 		final CMQueryResult result = view.select(anyAttribute(F), anyAttribute(R)) //
 				.from(filterClass(), as(F)) //
 				.join(roleClass(), as(R), over(filterRoleDomain(), as(D))) //
@@ -231,6 +244,19 @@ public class DataViewFilterStore implements FilterStore {
 		return from(result) //
 				.transform(toCard(R)) //
 				.transform(toAttributeValue(CODE_ATTRIBUTE, String.class));
+	}
+
+	@Override
+	public Iterable<Long> joinedFilters(final String group) {
+		final CMQueryResult result = view.select(anyAttribute(F), anyAttribute(R)) //
+				.from(filterClass(), as(F)) //
+				.join(roleClass(), as(R), over(filterRoleDomain(), as(D))) //
+				.where(groupNames(group)) //
+				.orderBy(attribute(F, NAME), ASC) //
+				.run();
+		return from(result) //
+				.transform(toCard(F)) //
+				.transform(toId());
 	}
 
 	/*
